--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "3.3.15",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@ethersproject/providers": "5.3.1",
@@ -18,6 +19,9 @@
     "@web3-react/frame-connector": "6.0.9",
     "@web3-react/injected-connector": "6.0.7",
     "@web3-react/walletconnect-connector": "6.2.8",
+    "gamut-sdk": "^1.1.8",
+    "graphql": "15.5.0",
+    "graphql-tag": "2.11.0",
     "lightweight-charts": "^3.8.0",
     "notistack": "2.0.2",
     "react": "^18.2.0",
@@ -27,6 +31,7 @@
     "react-redux": "7.2.6",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "recharts": "2.1.9",
     "redux-debounced": "0.5.0",
     "redux-thunk": "2.3.0",
     "twin.macro": "2.8.2",
