--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@web3-react/frame-connector": "6.0.9",
     "@web3-react/injected-connector": "6.0.7",
     "@web3-react/walletconnect-connector": "6.2.8",
+    "axios": "^1.2.2",
+    "ethers": "^5.7.2",
     "gamut-sdk": "^1.2.0",
     "graphql": "15.5.0",
     "graphql-tag": "2.11.0",
