--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@transak/transak-sdk": "^1.3.0",
     "@web3-react/core": "6.1.9",
     "@web3-react/frame-connector": "6.0.9",
     "@web3-react/injected-connector": "6.0.7",
