--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@0xsquid/widget": "^1.4.75",
     "@apollo/client": "3.3.15",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
