--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "react-app-rewired": "2.2.1",
     "react-copy-to-clipboard": "5.0.3",
     "react-dom": "^18.2.0",
+    "react-native": "^0.71.8",
     "react-redux": "7.2.6",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "2.1.9",
     "redux-debounced": "0.5.0",
     "redux-thunk": "2.3.0",
