--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "https-browserify": "^1.0.0",
     "node-sass": "^6.0.0",
     "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^7.0.39",
     "process": "^0.11.10",
     "sass": "^1.49.9",
