--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@0xsquid/widget": "^1.4.75",
+    "@0xsquid/widget": "^1.4.76-beta.0",
     "@apollo/client": "3.3.15",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -41,8 +41,8 @@
     "web3": "1.3.6"
   },
   "scripts": {
-    "start": "GENERATE_SOURCEMAP=false react-app-rewired start",
-    "build": "GENERATE_SOURCEMAP=false react-app-rewired build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
